--- a/css/styles.css
+++ b/css/styles.css
@@ -486,9 +486,13 @@ background: #2E2F42;
 }
 .container-footer{
     width: 28%;
+   margin-right: 90px;
+
+
 }
 .container-footer-soc {
    width: 62%;
+   margin-right: 50px;
 }
 .footer-soc-title {
     font-family: 'Roboto';
@@ -562,6 +566,74 @@ width: 264px;
 
 }
 .container-footer{
+}
+.footer-form{
+
+}
+.subscribe-form{
+display: flex;
+
+}
+.subscribe-input{
+   width: 264px;
+   height: 40px;
+   background: #2E2F42; 
+   border-radius: 4px;
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    margin-right: 24px;
+    padding: 8px 16px;
+    color: #FFFFFF;
+    font-size: 12px;
+} 
+.subscribe-input:focus{
+    border: 1px solid #4D5AE5;
+    border-radius: 4px;
+}
+.subscribe-input::placeholder{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    color: rgba(255, 255, 255, 0.6);
+    
+}
+.subscribe-btn{
+    min-width: 165px;
+    height: 40px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    background: #4D5AE5;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 24px;
+    border-color: transparent;
+    transition: background-color 250ms linear, color 250ms linear, border 250ms linear, box-shadow 250ms linear;
+}
+.subscribe-btn:focus,
+.subscribe-btn:hover{
+    background: #404BBF;
+    color:#FFFFFF;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+                0px 2px 1px rgba(0, 0, 0, 0.08), 
+                0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: background-color 250ms linear, color 250ms linear, border 250ms linear, box-shadow 250ms linear; 
+    animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 3.0);
+}
+.submit-btn-icon{
+    margin-left: 16px;
+fill:rgba(255, 255, 255, 1);
 }
 /*--------------------------------------------------------
 ------------------------Portfolio-------------------------
@@ -739,15 +811,152 @@ color: var(--main-text-color);
      border-radius: 50%;
      display: block;
      margin-left: auto;
+     margin-bottom: 24px;
 }
 .modal-close-icon {
    width: 8px;
    height: 8px;
-   fill:  #000000;;
+   fill:  #000000;
     }
-    .modal-close:is(:hover, :focus) {
-        background: #6a6a72;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+    .modal-close:is(:hover, :focus){
+        background: #404BBF;
+        border: 1px solid #404BBF;
         transition: background 250ms linear, color 250ms linear, border 250ms linear, box-shadow 250ms linear; 
     animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 3.0);
     }
+.modal-close:hover .modal-close-icon{
+    fill: #FFFFFF;;
+}
+.modal-title{
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+text-align: center;
+letter-spacing: 0.02em;
+color: #2E2F42;
+margin-bottom: 14px;
+}
+.modal-form{
+
+}
+.modal-input{
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 8px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.3;
+    letter-spacing: 0.04em;
+    color: rgba(0, 0, 0, 1);
+    padding-left: 38px;
+    outline: transparent;
+}
+.modal-input:focus{
+    border-color:#4D5AE5;
+}
+.modal-input:focus+ .modal-intput-icon{
+    fill:#4D5AE5;
+}
+.modal-input::placeholder, .modal-comment{
+    font-size: 12px;
+    line-height: 1.3;
+    color: rgba(117, 117, 117, 0.5);
+
+}
+.modal-input:not(:focus):not(:placeholder-shown):valid{
+    background-color: #a7d6ad;
+}
+.modal-input:not(:focus):not(:placeholder-shown):invalid{
+    background-color: #d6aeae;
+}
+.modal-input-text{
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: #8E8F99;
+}
+.modal-label-text{
+    display: block;
+    margin-bottom: 4px;
+}
+.modal-field{
+position: relative;
+}
+.modal-intput-icon{
+    position: absolute;
+    left: 16px;
+    bottom:19px; 
+}
+.modal-comment{
+    width: 100%;
+    height: 120px;
+    left: 0px;
+    top: 216px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 8px 16px;
+    resize: none;
+    margin-bottom: 16px;
+    
+}
+.modal-comment:focus{
+    border-color:  #4D5AE5;
+}
+.input-wrap{
+
+}
+.modal-check{
+
+}
+.check-text{
+    font-size: 12px;
+    line-height: 1.3;
+    color: #757575;
+    display: flex;
+}
+.check-text::before{
+    content:'';
+    width: 16px;
+    height: 16px;
+    border: 1.25px solid #2E2F42;
+    border-radius: 2px;
+    margin-right: 8px; 
+    margin-bottom: 24px;
+    transition: background-color 250ms;
+
+}
+.modal-check:checked+ .check-text::before{
+    background: #404BBF;
+    border: 1.25px solid #404BBF;
+    background-image: url(../images/check.svg);
+    background-size: 10px 8px;
+    background-position:center;
+    background-repeat: no-repeat;
+}
+.modal-btn {
+    margin: 0 auto;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    background: #4D5AE5;
+    color: #FFFFFF;
+    cursor: pointer;
+    padding: 16px 32px;
+    border: none;
+    border-radius: 4px;
+    transition: background 250ms linear, color 250ms linear,border 250ms linear; 
+    }
+.modal-btn:hover,
+.modal-btn:focus {
+    background: #404BBF;;
+    color:#FFFFFF;
+    transition:background 250ms linear, color 250ms linear, border 250ms linear;
+    animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 3.0);
+}
