--- a/css/styles.css
+++ b/css/styles.css
@@ -812,17 +812,21 @@ color: var(--main-text-color);
      display: block;
      margin-left: auto;
      margin-bottom: 24px;
-}
+     }
 .modal-close-icon {
    width: 8px;
    height: 8px;
    fill:  #000000;
+   margin-top: auto
+
+   
+   
     }
     .modal-close:is(:hover, :focus){
         background: #404BBF;
         border: 1px solid #404BBF;
         transition: background 250ms linear, color 250ms linear, border 250ms linear, box-shadow 250ms linear; 
-    animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 3.0);
+        animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 3.0);
     }
 .modal-close:hover .modal-close-icon{
     fill: #FFFFFF;;
@@ -934,6 +938,18 @@ position: relative;
     background-size: 10px 8px;
     background-position:center;
     background-repeat: no-repeat;
+}
+.modal-link{
+   margin-left: 5px;
+   font-family: 'Roboto';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 12px;
+   line-height: 1.3;
+   color: rgba(77, 90, 229, 1);
+
+
+letter-spacing: 0.04em;
 }
 .modal-btn {
     margin: 0 auto;
